--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "http-errors": "~1.6.3",
     "mongoose": "^8.0.3",
     "morgan": "~1.9.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "razorpay": "^2.9.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
