--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "mongoose": "^8.0.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.8",
+    "randomstring": "^1.3.0",
     "razorpay": "^2.9.2"
   },
   "devDependencies": {
