--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.8",
     "randomstring": "^1.3.0",
-    "razorpay": "^2.9.2"
+    "razorpay": "^2.9.2",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
