--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "express": "~4.16.1",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
+    "handlebars": "^4.7.8",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "mime-types": "^2.1.35",
+    "moment": "^2.30.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "morgan": "~1.9.1",
